fix: change school id to query
