# src/modules/teachers/useCases/listTeachersBySchool/ListTeachersBySchoolController.ts
@@ -6,13 +6,15 @@ import { ListTeachersBySchoolUseCase } from "./ListTeachersBySchoolUseCase";
 
 class ListTeachersBySchoolController {
     async handle(request: Request, response: Response) {
-        const { school_id } = request.params;
+        const { school_id } = request.query;
         const teachersRepository = new TeachersRepository();
         const listTeachersBySchoolUseCase = new ListTeachersBySchoolUseCase(
             teachersRepository
         );
 
-        const teachers = await listTeachersBySchoolUseCase.execute(school_id);
+        const teachers = await listTeachersBySchoolUseCase.execute(
+            school_id as string
+        );
 
         return response.json(teachers).status(200);
     }
